Select Linked is inconsistant #45455

Closed
opened 2015-07-16 07:43:08 +02:00 by Carlo Andreacchio · 8 comments

System Information
Windows 7 x64 gtx580

Blender Version
Broken: 2.75 - 8be4d76 , 52fa5b1
Worked: 2.74 - 9715d4c

Short description of error
Pressing L over linked edges is inconsistant

Exact steps for others to reproduce the error

  1. Open attached blend file
  2. Hover over one of the lines
  3. press L
  4. 3 out of the 5 verts are selected
  5. open attached blend file in older blender
  6. repeat steps
  7. all of the verts that are connected are selected

bug.blend

**System Information** Windows 7 x64 gtx580 **Blender Version** Broken: 2.75 - 8be4d76 , 52fa5b1 Worked: 2.74 - 9715d4c **Short description of error** Pressing L over linked edges is inconsistant **Exact steps for others to reproduce the error** 1) Open attached blend file 2) Hover over one of the lines 3) press L 4) 3 out of the 5 verts are selected 5) open attached blend file in older blender 6) repeat steps 7) all of the verts that are connected are selected [bug.blend](https://archive.blender.org/developer/F207398/bug.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @candreacchio

Added subscriber: @candreacchio

Added subscriber: @mont29

Added subscriber: @mont29
Campbell Barton was assigned by Bastien Montagne 2015-07-16 18:09:12 +02:00

Campbell, think this one is for you… Looks like simple vert/edge handling of this operator when some limit options are set is broken for 1D topology (tried with regular faces and grid without faces, and everything works OK in those cases)…

As a side note:

  • Is it intentional that Seam limit is ON by default?
  • Why checking first vert select mode, then edge, then face? In case of multiple modes enabled at once, I would expect to 'highest' type to be preferred (e.g. in face + edge case, handle faces rather than edges)?
Campbell, think this one is for you… Looks like simple vert/edge handling of this operator when some limit options are set is broken for 1D topology (tried with regular faces and grid without faces, and everything works OK in those cases)… As a side note: * Is it intentional that Seam limit is ON by default? * Why checking first vert select mode, then edge, then face? In case of multiple modes enabled at once, I would expect to 'highest' type to be preferred (e.g. in face + edge case, handle faces rather than edges)?

Just following up on this, didnt realise there was new limiting modes... There doesnt seem to be a way of turning these limiting modes off.

Just following up on this, didnt realise there was new limiting modes... There doesnt seem to be a way of turning these limiting modes off.

Yes there is, just shift-click on last selected item…

Yes there is, just shift-click on last selected item…

This issue was referenced by 1d9fbdc9a0

This issue was referenced by 1d9fbdc9a0fd69027c8918de1851f95296eda006

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45455
No description provided.