Fix T45455: Select linked issue w/ hidden faces